--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>What's the weather like?</title>
+    <title>Погода</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css"/>
 </head>
 <body>
@@ -29,7 +29,7 @@
                         </div>
                         <div class="control">
                             <button class="button is-info">
-                                Add City
+                                Добавить город
                             </button>
                         </div>
                     </div>
